--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,15 @@
 # Site settings
-title: Pudhina
+title: 我的新博客
 description: >
-  A simple, minimal Jekyll theme for a personal web page and blog, focusing on white space and readability
+    这是献给自己的第一个博客
 
-baseurl: "/Pudhina" # the subpath of your site, e.g. /blog/
-url: "https://knhash.github.io" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "https://rre11.github.io" # the base hostname & protocol for your site
 
 author:
-  fullname: Pudhina
-  github: github
-  linkedin: linkedin
-  email: example@email.com
+  fullname: wuyuru
+  github: rre11
+  email: 744507911@qq.com
 
 
 # Syntax highlighting
